openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
spec:
  replicas: 3  
  selector:
    matchLabels:
      app: java-deployment
  template:
    metadata:
      labels:
        app: java-deployment
    spec:
      containers:
      - name: java-app
        image: tabana1/ivolve-grad:latest
        ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  type: LoadBalancer
  selector:
    app: java-deployment
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: java-deployment
spec:
  to:
    kind: Service
    name: java-service
  port:
    targetPort: 8081
  tls:
    termination: edge
  wildcardPolicy: None
